// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/search_bar/SearchBar should match snapshot with search 1`] = `
<div
  className="search-form__container"
  id="searchFormContainer"
>
  <form
    aria-labelledby="searchBox"
    autoComplete="off"
    className="search__form"
    onSubmit={[MockFunction]}
    role="application"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <div
      className="search__font-icon"
    >
      <i
        className="icon icon-magnify icon-16"
      />
    </div>
    <SuggestionBox
      aria-describedby="searchbar-help-popup"
      aria-label="Search"
      autoFocus={false}
      className="search-bar a11y__region"
      clearable={true}
      completeOnTab={true}
      containerClass="w-full"
      data-a11y-sort-order="9"
      dateComponent={[Function]}
      delayInputUpdate={true}
      forceSuggestionsWhenBlur={false}
      id="searchBox"
      isRHS={false}
      listComponent={[Function]}
      listStyle="top"
      listenForMentionKeyClick={false}
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onClear={[MockFunction]}
      onFocus={[MockFunction]}
      onKeyDown={[Function]}
      openOnFocus={false}
      openWhenEmpty={false}
      placeholder="Search"
      providers={
        Array [
          SearchDateProvider {
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
          SearchChannelProvider {
            "autocompleteChannelsForSearch": [MockFunction],
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
          SearchUserProvider {
            "autocompleteUsersInTeam": [MockFunction],
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
        ]
      }
      renderDividers={true}
      renderNoResults={false}
      replaceAllInputOnSelect={false}
      requiredCharacters={1}
      tabIndex="0"
      type="search"
      value="test"
    />
  </form>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search 1`] = `
<div
  className="search-form__container"
  id="searchFormContainer"
>
  <form
    aria-labelledby="searchBox"
    autoComplete="off"
    className="search__form"
    onSubmit={[MockFunction]}
    role="application"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <div
      className="search__font-icon"
    >
      <i
        className="icon icon-magnify icon-16"
      />
    </div>
    <SuggestionBox
      aria-describedby="searchbar-help-popup"
      aria-label="Search"
      autoFocus={false}
      className="search-bar a11y__region"
      clearable={true}
      completeOnTab={true}
      containerClass="w-full"
      data-a11y-sort-order="9"
      dateComponent={[Function]}
      delayInputUpdate={true}
      forceSuggestionsWhenBlur={false}
      id="searchBox"
      isRHS={false}
      listComponent={[Function]}
      listStyle="top"
      listenForMentionKeyClick={false}
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onClear={[MockFunction]}
      onFocus={[MockFunction]}
      onKeyDown={[Function]}
      openOnFocus={false}
      openWhenEmpty={false}
      placeholder="Search"
      providers={
        Array [
          SearchDateProvider {
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
          SearchChannelProvider {
            "autocompleteChannelsForSearch": [MockFunction],
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
          SearchUserProvider {
            "autocompleteUsersInTeam": [MockFunction],
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
        ]
      }
      renderDividers={true}
      renderNoResults={false}
      replaceAllInputOnSelect={false}
      requiredCharacters={1}
      tabIndex="0"
      type="search"
      value=""
    />
  </form>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search on focus 1`] = `
<div
  className="search-form__container"
  id="searchFormContainer"
>
  <form
    aria-labelledby="searchBox"
    autoComplete="off"
    className="search__form search__form--focused"
    onSubmit={[MockFunction]}
    role="application"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <div
      className="search__font-icon"
    >
      <i
        className="icon icon-magnify icon-16"
      />
    </div>
    <SuggestionBox
      aria-describedby="searchbar-help-popup"
      aria-label="Search"
      autoFocus={false}
      className="search-bar a11y__region"
      clearable={true}
      completeOnTab={true}
      containerClass="w-full"
      data-a11y-sort-order="9"
      dateComponent={[Function]}
      delayInputUpdate={true}
      forceSuggestionsWhenBlur={false}
      id="searchBox"
      isRHS={false}
      listComponent={[Function]}
      listStyle="top"
      listenForMentionKeyClick={false}
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onClear={[MockFunction]}
      onFocus={[MockFunction]}
      onKeyDown={[Function]}
      openOnFocus={false}
      openWhenEmpty={false}
      placeholder="Search"
      providers={
        Array [
          SearchDateProvider {
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
          SearchChannelProvider {
            "autocompleteChannelsForSearch": [MockFunction],
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
          SearchUserProvider {
            "autocompleteUsersInTeam": [MockFunction],
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
        ]
      }
      renderDividers={true}
      renderNoResults={false}
      replaceAllInputOnSelect={false}
      requiredCharacters={1}
      tabIndex="0"
      type="search"
      value=""
    />
  </form>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search on focus in mobile 1`] = `
<div
  className="search-form__container"
  id="searchFormContainer"
>
  <form
    aria-labelledby="searchBox"
    autoComplete="off"
    className="search__form search__form--focused"
    onSubmit={[MockFunction]}
    role="application"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <div
      className="search__font-icon"
    >
      <i
        className="icon icon-magnify icon-16"
      />
    </div>
    <SuggestionBox
      aria-describedby="searchbar-help-popup"
      aria-label="Search"
      autoFocus={false}
      className="search-bar a11y__region"
      clearable={true}
      completeOnTab={true}
      containerClass="w-full"
      data-a11y-sort-order="9"
      dateComponent={[Function]}
      delayInputUpdate={true}
      forceSuggestionsWhenBlur={false}
      id="searchBox"
      isRHS={false}
      listComponent={[Function]}
      listStyle="top"
      listenForMentionKeyClick={false}
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onClear={[MockFunction]}
      onFocus={[MockFunction]}
      onKeyDown={[Function]}
      openOnFocus={false}
      openWhenEmpty={false}
      placeholder="Search"
      providers={
        Array [
          SearchDateProvider {
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
          SearchChannelProvider {
            "autocompleteChannelsForSearch": [MockFunction],
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
          SearchUserProvider {
            "autocompleteUsersInTeam": [MockFunction],
            "disableDispatches": false,
            "latestComplete": true,
            "latestPrefix": "",
            "requestStarted": false,
          },
        ]
      }
      renderDividers={true}
      renderNoResults={false}
      replaceAllInputOnSelect={false}
      requiredCharacters={1}
      tabIndex="0"
      type="search"
      value=""
    />
  </form>
</div>
`;
